syntax = "proto3";

// 命 令 号: 1000
// 命令名称: led_fixed_expressions_set
// 命令描述: 灯光模块固定表情控制
// 文件名称: d8c1000_led_fix_exp_set.proto

// 以下是 Android 生成对应 Java 所需信息
option java_package = "com.ubtedu.deviceconnect.libs.ukit.smart.protobuffer";
option java_outer_classname = "PbLedFixedExpressionsSet";

message LedFixedExpressionsSetRequest {
  // ATTR: REQUSET
  uint32 expressions_type = 1; //表情种类
  uint32 time = 2; //表情显示时间，单位：ms
  uint32 rgbc = 3; //表情rgbc值
}

message LedFixedExpressionsSetResponse {

}
